--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -21,7 +21,7 @@
     <div class="row mb-4">
       <div class="col-lg-12 text-center">
         <a href="{{path('app_event_new')}}" class="main-button custom-message-btn">
-          <i></i> Créer évènement
+          <i></i> + Créer un nouvel évènement
         </a>
       </div>
     </div>
