--- a/templates/organisateur/edit.html.twig
+++ b/templates/organisateur/edit.html.twig
@@ -3,11 +3,42 @@
 {% block title %}Edit Organisateur{% endblock %}
 
 {% block body %}
-    <h1>Edit Organisateur</h1>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-lg-8">
+      <div class="card shadow-lg border-0 rounded-4">
+        <div class="card-body p-5">
+          <h2 class="mb-4 text-center">Modifier un Organisateur</h2>
 
-    {{ include('organisateur/_form.html.twig', {'button_label': 'Update'}) }}
+          {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
 
-    <a href="{{ path('app_organisateur_index') }}">back to list</a>
+          {% for field in form %}
+            {% if field.vars.name != '_token' %}
+              <div class="mb-3">
+                {{ form_label(field, null, {'label_attr': {'class': 'form-label'}}) }}
+                {{ form_widget(field, {'attr': {'class': 'form-control'}}) }}
+                <div class="text-danger small mt-1">{{ form_errors(field) }}</div>
+              </div>
+            {% endif %}
+          {% endfor %}
 
-    {{ include('organisateur/_delete_form.html.twig') }}
+          <div class="text-center">
+            <button class="btn btn-warning px-4">{{ button_label|default('Update') }}</button>
+          </div>
+
+          {{ form_end(form) }}
+
+          <div class="text-center mt-3">
+            <a href="{{ path('app_organisateur_index') }}" class="btn btn-outline-secondary">← Retour à la liste</a>
+          </div>
+
+          <div class="text-center mt-3">
+            {{ include('organisateur/_delete_form.html.twig') }}
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
