--- a/templates/billet/new.html.twig
+++ b/templates/billet/new.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'baseBack.html.twig' %}
 
 {% block title %}Create Billet{% endblock %}
 
@@ -8,7 +8,7 @@
     <div class="col-lg-8">
       <div class="card shadow-lg border-0 rounded-4">
         <div class="card-body p-5">
-          <h2 class="mb-4 text-center">Create a New Billet</h2>
+          <h2 class="mb-4 text-center">Créez un nouveau billet</h2>
 
           {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
 
